--- a/.github/workflows/reusable-print-message.yml
+++ b/.github/workflows/reusable-print-message.yml
@@ -1,7 +1,11 @@
 name: Reusable Print Message
 
 on:
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      message:
+        required: true
+        type: string
 
 jobs:
   print-message:
